--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body class="prototype_bg">
     <div class="projects_container">
          <a href="projects/numberDisplay.html">Number Display</a>
+         <a href="projects/slowScrollPanel.html">Slow Scroll Panel</a>
     </div>
 
     <script src="js/numberDisplay.js"></script>
